Adding all the things to the home page

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Janna Perazzo</a>
+          <a class="navbar-brand" href="#">Janna</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="mailto:janna@gmail.com">Email Janna</a></li>
-            <li class="active"><a href="./">Book Now</a></li>
+            <li><a href="mailto:janna.perazzo@gmail.com">Email Janna</a></li>
+            <li class="active"><a href="https://clients.mindbodyonline.com/ASP/home.asp?studioid=47870">Book Now</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -51,16 +51,17 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>Janna Perazzo</h1>
-        <p>Janna cuts hair and kicks ass.  Do you want a fresh new 'do?</p>
-        <p>Just click the link below and change your life forever.</p>
+        <h1>Janna</h1>
+        <p class="text-muted"><small>at friends and company salon</small></p>
         <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Book Now with Janna &raquo;</a>
+          <a class="btn btn-lg btn-primary" href="https://clients.mindbodyonline.com/ASP/home.asp?studioid=47870" role="button">Book Now with Janna &raquo;</a>
         </p>
+        <p>If you are scheduling a same-day appointment or are having trouble finding an appointment time that works best for you, please call Janna at <a href="tel:+15134780854">(513) 478-0854</a>.
       </div>
 
       <div class="row">
         <div class="col-lg-4">
+        <h3>Hair Care</h3>
           <ul class="list-group">
             <li class="list-group-item">
               <span class="label label-success">$42</span>
@@ -94,10 +95,94 @@
               <span class="label label-success">$90 &amp; up</span>
               Full Highlight
             </li>
-
+            <li class="list-group-item">
+              <span class="label label-success">$75 &amp; up</span>
+              Combo: One Process Color with Foil
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$80</span>
+              Permanent Waves
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$150 &amp; up</span>
+              Kenra Smooth
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$28</span>
+              Shampoo and Blow-dry
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$20</span>
+              Flat Iron
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$60</span>
+              Formal Style
+            </li>
+            <li class="list-group-item">
+              <span class="label" style="float: right;">Upon Consultation</span>
+              Corrective Color
+            </li>
+            <li class="list-group-item">
+              <span class="label" style="float: right;">Upon Consultation</span>
+              Hair Extensions
+            </li>
           </ul>
+          <a class="btn btn-lg btn-primary pull-right" href="https://clients.mindbodyonline.com/ASP/home.asp?studioid=47870" role="button">Book Now &raquo;</a>
         </div>
 
+        <div class="col-lg-4">
+        <h3>Nail Care</h3>
+          <ul class="list-group">
+          <li class="list-group-item">
+              <span class="label label-success">$20</span>
+              Manicure
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$30</span>
+              Shellac Manicure
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$45</span>
+              Spa Pedicure
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$25</span>
+              Mini Pedicure
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$10</span>
+              Polish Change (hands)
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$15</span>
+              Polish Change (toes)
+            </li>
+            </ul>
+            <a class="btn btn-lg btn-primary pull-right" href="https://clients.mindbodyonline.com/ASP/home.asp?studioid=47870" role="button">Book Now &raquo;</a>
+        </div><!-- nail care -->
+        <div class="col-lg-4">
+        <h3>Waxing</h3>
+        <ul class="list-group">
+          <li class="list-group-item">
+              <span class="label label-success">$15</span>
+              Eyebrow Wax
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$10</span>
+              Lip Wax
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$10</span>
+              Chin Wax
+            </li>
+            <li class="list-group-item">
+              <span class="label label-success">$15</span>
+              Cheek Wax
+            </li>
+            </ul>
+            <a class="btn btn-lg btn-primary pull-right" href="https://clients.mindbodyonline.com/ASP/home.asp?studioid=47870" role="button">Book Now &raquo;</a>
+        </div>
 
       </div><!-- row -->
 
