Adding in some OG tags

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- <link rel="shortcut icon" href="../../assets/ico/favicon.ico"> -->
+    <meta name="description" content="Janna at friends and company salon">
+    <meta name="author" content="John David Back">
 
+    <meta name="og:url" content="http://jannaperazzo.com/">
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="Janna at friends and company salon">
+    <meta name="og:description" content="Janna does the best hair in Cincinnati, that's a promise.">
+    
     <title>Janna Perazzo</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
