Okay fixing the capitalization

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Janna at friends and company salon">
+    <meta name="description" content="Janna at Friends and Company Salon">
     <meta name="author" content="John David Back">
 
     <meta name="og:url" content="http://jannaperazzo.com/">
     <meta name="og:type" content="website">
-    <meta name="og:title" content="Janna at friends and company salon">
+    <meta name="og:title" content="Janna at Friends and Company Salon">
     <meta name="og:description" content="Janna does the best hair in Cincinnati, that's a promise.">
     
-    <title>Janna Perazzo</title>
+    <title>Janna at Friends and Company Salon</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -56,7 +56,7 @@
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Janna</h1>
-        <p class="text-muted"><small>at friends and company salon</small></p>
+        <p class="text-muted"><small>at Friends and Company Salon</small></p>
         <p>
           <a class="btn btn-lg btn-primary" href="https://clients.mindbodyonline.com/ASP/home.asp?studioid=47870" role="button">Book Now with Janna &raquo;</a>
         </p>
